--- a/404.html
+++ b/404.html
@@ -11,10 +11,10 @@
   <title>404 Page not found &middot; Aurora.Duang</title>
 
   
-  <link rel="stylesheet" href="https://d-aurora.github.io/css/print.css" media="print">
-  <link rel="stylesheet" href="https://d-aurora.github.io/css/poole.css">
-  <link rel="stylesheet" href="https://d-aurora.github.io/css/syntax.css">
-  <link rel="stylesheet" href="https://d-aurora.github.io/css/hyde.css">
+  <link rel="stylesheet" href="http://vjeantet.fr/css/print.css" media="print">
+  <link rel="stylesheet" href="http://vjeantet.fr/css/poole.css">
+  <link rel="stylesheet" href="http://vjeantet.fr/css/syntax.css">
+  <link rel="stylesheet" href="http://vjeantet.fr/css/hyde.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
   
@@ -22,21 +22,21 @@
   <link rel="shortcut icon" href="/favicon.png">
 
   
-  <link href="https://d-aurora.github.io/index.xml" rel="alternate" type="application/rss+xml" title="Aurora.Duang" />
+  <link href="http://vjeantet.fr/index.xml" rel="alternate" type="application/rss+xml" title="Aurora.Duang" />
 </head>
 
   <body class=" ">
   <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="https://d-aurora.github.io/"><h1>Aurora.Duang</h1></a>
+      <a href="http://vjeantet.fr/"><h1>Aurora.Duang</h1></a>
       <p class="lead">
        Whatever the mind of man can conceive and believe, it can achieve. 
       </p>
     </div>
 
     <ul class="sidebar-nav">
-      <li><a href="https://d-aurora.github.io/">Home</a> </li>
+      <li><a href="http://vjeantet.fr/">Home</a> </li>
       <li><a href="/el"> Blog </a></li><li><a href="https://github.com/D-Aurora"> Github repos </a></li><li><a href="http://wiki.lianjia.com/pages/viewpage.action?pageId=76645381"> Lianjia Wiki </a></li><li><a href="https://mail.lianjia.com/owa/#path=/mail"> Lianjia Mail </a></li>
     </ul>
 
@@ -46,7 +46,7 @@
 
     <div class="content container">
     <h1>404: Page not found</h1>
-<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="https://d-aurora.github.io/">Head back home</a> to try finding it again.</p>
+<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="http://vjeantet.fr/">Head back home</a> to try finding it again.</p>
     </div>
 
     
